--- a/introduce.html
+++ b/introduce.html
@@ -6,6 +6,9 @@
     <title>Branch practice~!!</title>
   </HEAD>
   <BODY>
-
+    <div id="wrapper">
+      <h1>Main home</h1>
+      <p>This is main home. </p>
+    </div>
   </BODY>
 </HTML>
